--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@ appdirs==1.4.4
 attrs==20.3.0
 Automat==20.2.0
 beautifulsoup4==4.9.3
+blis==0.7.4
 bs4==0.0.1
+cached-property==1.5.2
+cachetools==4.2.1
+catalogue==2.0.1
 certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
@@ -10,45 +14,81 @@ click==7.1.2
 constantly==15.1.0
 cryptography==3.3.1
 cssselect==1.1.0
+cymem==2.0.5
+defusedxml==0.6.0
+en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0-py3-none-any.whl
 flake8==3.8.4
 Flask==1.1.2
+google-auth==1.26.1
+google-auth-oauthlib==0.4.2
+googleads==26.0.0
 hyperlink==20.0.1
 idna==2.10
 incremental==17.5.0
+isodate==0.6.0
 itemadapter==0.2.0
 itemloaders==1.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jmespath==0.10.0
+joblib==1.0.1
 lxml==4.6.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
+murmurhash==1.0.5
+nlp-rake==1.0
+nltk==3.5
+numpy==1.20.1
+oauthlib==3.1.0
+packaging==20.9
+pandas==1.2.2
 parsel==1.6.0
+pathy==0.3.6
+preshed==3.0.5
 Protego==0.1.16
 psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycparser==2.20
+pydantic==1.7.3
 PyDispatcher==2.0.5
 pyee==8.1.0
 pyflakes==2.2.0
 PyHamcrest==2.0.2
 pyOpenSSL==20.0.1
+pyparsing==2.4.7
 pyppeteer==0.2.5
+python-dateutil==2.8.1
+pytz==2021.1
+PyYAML==5.4.1
 queuelib==1.5.0
+regex==2020.11.13
 requests==2.25.1
+requests-file==1.5.1
+requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+rsa==4.7
 Scrapy==2.4.1
 scrapy-selenium==0.0.7
 scrapy-splash==0.7.2
 selenium==3.141.0
 service-identity==18.1.0
 six==1.15.0
+smart-open==3.0.0
 soupsieve==2.1
+spacy==3.0.3
+spacy-legacy==3.0.1
+srsly==2.4.0
+thinc==8.0.1
 tqdm==4.56.0
 Twisted==20.3.0
+typer==0.3.2
 urllib3==1.26.2
 w3lib==1.22.0
+wasabi==0.8.2
 websockets==8.1
 Werkzeug==1.0.1
+xmltodict==0.12.0
+zeep==4.0.0
 zope.interface==5.2.0
