--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ defusedxml==0.6.0
 en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0-py3-none-any.whl
 flake8==3.8.4
 Flask==1.1.2
+gensim==3.8.3
 google-auth==1.26.1
 google-auth-oauthlib==0.4.2
 googleads==26.0.0
@@ -60,15 +61,18 @@ pyOpenSSL==20.0.1
 pyparsing==2.4.7
 pyppeteer==0.2.5
 python-dateutil==2.8.1
+python-rake==1.5.0
 pytz==2021.1
 PyYAML==5.4.1
 queuelib==1.5.0
+rake-nltk==1.0.4
 regex==2020.11.13
 requests==2.25.1
 requests-file==1.5.1
 requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 rsa==4.7
+scipy==1.6.0
 Scrapy==2.4.1
 scrapy-selenium==0.0.7
 scrapy-splash==0.7.2
